src/test/ui/nll/borrowed-temporary-error.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowed-temporary-error.rs:20:10
   |
LL |         &(v,)
   |          ^^^^ temporary value does not live long enough
LL |         //~^ ERROR borrowed value does not live long enough [E0597]
LL |     });
   |       - temporary value only lives until here
LL |     println!("{:?}", x);
   |                      - borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
